Correction composant Collapse / Modification de la mise en page des composants Banner, Cards, Rating

--- a/kasa-app/src/components/Banner/Banner.module.scss
+++ b/kasa-app/src/components/Banner/Banner.module.scss
@@ -17,7 +17,7 @@
 
 .text {
   color: #fff;
-  font-size: 70px;
+  font-size: 67px;
   font-weight: normal;
   z-index: 1;
   position: absolute;
