--- a/kasa-app/src/components/Footer/footer.module.scss
+++ b/kasa-app/src/components/Footer/footer.module.scss
@@ -5,6 +5,7 @@
   height: 250px;
   align-items: center;
   justify-content: center;
+  margin-top: 250px;
 }
 
 .logo {
