--- a/kasa-app/src/components/Rating/rating.module.scss
+++ b/kasa-app/src/components/Rating/rating.module.scss
@@ -1,6 +1,6 @@
 .ratingWrapper {
   & img {
-    width: 50px;
-    height: 50px;
+    width: 75px;
+    height: 75px;
   }
 }
