--- a/kasa-app/src/pages/About/about.module.scss
+++ b/kasa-app/src/pages/About/about.module.scss
@@ -5,3 +5,10 @@
   margin: 0 auto 200px auto;
   width: 80%;
 }
+
+.collapseTxt {
+  color: #ff6060;
+  font-size: 35px;
+  margin: 0;
+  padding: 0;
+}
