--- a/kasa-app/src/pages/Appartment/appartment.module.scss
+++ b/kasa-app/src/pages/Appartment/appartment.module.scss
@@ -30,6 +30,7 @@
   font-size: 50px;
   margin: 0;
 }
+
 .location {
   font-size: 35px;
   margin: 5px 0 35px 0;
@@ -43,8 +44,18 @@
 .hostName {
   font-size: 40px;
   color: #ff6060;
+  position: relative;
+  right: 20px;
 }
 
 .hostPicture {
   border-radius: 50%;
+}
+
+.collapseTxt {
+  color: #ff6060;
+  font-size: 35px;
+  margin: 0;
+  padding: 10px 0;
+  list-style: none;
 }
